ingress/haproxy-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: haproxy-ingress
spec:
  tls:
  - hosts:
    - lolcat.azure.com
    secretName: lolcat-tls  
  rules:
  - host: lolcat.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: http-svc
          servicePort: 8080
