ingress/one-way-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: one-way-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/add-base-url : "true"
    # nginx.ingress.kubernetes.io/auth-tls-secret: default/aks-ingress-int
    nginx.ingress.kubernetes.io/rewrite-target: /$2 #target URI where the traffic must be redirected
spec:
  tls:
  - hosts:
    - internal.azure.com
    secretName: aks-ingress-int
  rules:
  - host: internal.azure.com
    http:
      paths:
      - path: /identity(/|$)(.*) # the service doesn't know about this path, therefore 'identity' is rewritten using rewrite annotation https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/rewrite/README.md, this can break css & js links https://www.reddit.com/r/kubernetes/comments/gychg1/nginx_ingress_rewrite_breaking_css_and_js_links/
        backend:
          serviceName: identity-server
          servicePort: 80
